--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,10 +10,24 @@
     "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "@veramo/core": "^6.0.0",
+    "@veramo/credential-ld": "^6.0.0",
+    "@veramo/credential-w3c": "^6.0.0",
+    "@veramo/did-manager": "^6.0.0",
+    "@veramo/did-provider-key": "^6.0.0",
+    "@veramo/did-resolver": "^6.0.0",
+    "@veramo/key-manager": "^6.0.0",
+    "@veramo/kms-local": "^6.0.0",
+    "@veramo/utils": "^6.0.0",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
+    "did-resolver": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-json-view-lite": "^1.5.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "web-did-resolver": "^2.0.27",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -39,5 +53,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "crypto-browserify": "^3.12.0"
   }
 }
