--- a/client-app/package.json
+++ b/client-app/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-import-assertions": "^7.25.6",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@craco/craco": "^7.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,25 +17,36 @@
     "@veramo/credential-ld": "^6.0.0",
     "@veramo/credential-w3c": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
+    "@veramo/did-provider-jwk": "^6.0.0",
     "@veramo/did-provider-key": "^6.0.0",
+    "@veramo/did-provider-peer": "^6.0.0",
+    "@veramo/did-provider-web": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
     "@veramo/key-manager": "^6.0.0",
     "@veramo/kms-local": "^6.0.0",
     "@veramo/utils": "^6.0.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
+    "aws-sdk": "^2.1692.0",
+    "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "did-resolver": "^4.1.0",
+    "key-did-resolver": "^4.0.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-json-view-lite": "^1.5.0",
     "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
     "typescript": "^4.9.5",
+    "vm-browserify": "^1.1.2",
     "web-did-resolver": "^2.0.27",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "craco start",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -55,6 +69,7 @@
     ]
   },
   "devDependencies": {
-    "crypto-browserify": "^3.12.0"
+    "crypto-browserify": "^3.12.0",
+    "react-app-alias": "^2.2.2"
   }
 }
