Implemented use case 3

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -16,7 +16,9 @@
     "@veramo/core": "^6.0.0",
     "@veramo/credential-ld": "^6.0.0",
     "@veramo/credential-w3c": "^6.0.0",
+    "@veramo/did-comm": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
+    "@veramo/did-provider-ethr": "^6.0.0",
     "@veramo/did-provider-jwk": "^6.0.0",
     "@veramo/did-provider-key": "^6.0.0",
     "@veramo/did-provider-peer": "^6.0.0",
@@ -24,6 +26,7 @@
     "@veramo/did-resolver": "^6.0.0",
     "@veramo/key-manager": "^6.0.0",
     "@veramo/kms-local": "^6.0.0",
+    "@veramo/message-handler": "^6.0.0",
     "@veramo/utils": "^6.0.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/xterm": "^5.5.0",
@@ -31,6 +34,8 @@
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
     "did-resolver": "^4.1.0",
+    "ethers": "^6.13.5",
+    "ethr-did-resolver": "^11.0.3",
     "key-did-resolver": "^4.0.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
