--- a/client-app/package.json
+++ b/client-app/package.json
@@ -10,7 +10,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.108",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@veramo/core": "^6.0.0",
@@ -37,6 +36,7 @@
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
     "key-did-resolver": "^4.0.0",
+    "papaparse": "^5.5.2",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "react": "^18.3.1",
@@ -74,6 +74,8 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^22.13.5",
+    "@types/papaparse": "^5.3.15",
     "crypto-browserify": "^3.12.0",
     "react-app-alias": "^2.2.2"
   }
