--- a/client-app/package.json
+++ b/client-app/package.json
@@ -18,6 +18,7 @@
     "@veramo/did-comm": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
     "@veramo/did-provider-ethr": "^6.0.0",
+    "@veramo/did-provider-key": "^6.0.0",
     "@veramo/did-provider-web": "^6.0.0",
     "@veramo/did-resolver": "^6.0.0",
     "@veramo/key-manager": "^6.0.0",
@@ -32,6 +33,7 @@
     "did-resolver": "^4.1.0",
     "ethers": "^6.13.5",
     "ethr-did-resolver": "^11.0.3",
+    "key-did-resolver": "^4.0.0",
     "papaparse": "^5.5.2",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
